--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
+    <script src="logic.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1 class="title">Etch-a-Sketch</h1>
+    <div class="selector">
+        <p class="grid-size">Grid size:</p>&nbsp;
+        <select>
+            <option value="45">45x45</option>
+            <option value="45">30x30</option>
+            <option value="45">15x15</option>
+            <option value="45">10x10</option>
+        </select>
+    </div>
+    <div class="container"></div>
+    <div class="reset-button">
+        <button class="reset">RESET</button>
+    </div>
 </body>
 </html>
