Added different grid sizes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="selector">
         <p class="grid-size">Grid size:</p>&nbsp;
         <select>
-            <option value="45">45x45</option>
-            <option value="45">30x30</option>
-            <option value="45">15x15</option>
-            <option value="45">10x10</option>
+            <option value="32">32x32</option>
+            <option value="16" selected>16x16</option>
+            <option value="8">8x8</option>
+            <option value="4">4x4</option>
         </select>
     </div>
     <div class="container"></div>
