Added 3 buttons for BEGIN/STOP/RESET the drawing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </select>
     </div>
     <div class="container"></div>
-    <div class="reset-button">
+    <div class="buttons">
+        <button class="begin">BEGIN</button>
+        <button class="stop">STOP</button>
         <button class="reset">RESET</button>
     </div>
 </body>
